--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.3.2",
     "@supabase/supabase-js": "^2.55.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "recharts": "^3.1.2",
-    "@mui/icons-material": "^7.2.0"
+    "react-router-dom": "^7.9.1",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
